fix scrollbars in sidebar

--- a/src/app/components/Sidebar/sidebar.css
+++ b/src/app/components/Sidebar/sidebar.css
@@ -20,7 +20,7 @@
   .sidebar {
     height: 100%;
     padding: 8rem 20px 3rem;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   @media screen and (min-width: 769px) {
@@ -31,7 +31,7 @@
       position: sticky;
       top: 10px;
       max-height: 100vh;
-      overflow: scroll;
+      overflow: auto;
     }
 
     .sidebar {
